--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <div class="ratio ratio-16x9">
-			<iframe class="embed-responsive-item"  src="https://www.youtube.com/embed/9AuuWoHxwMc" 
-			title="Guitar lessons" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-			gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-			</div>
+            
+			<div onclick="dodajAktywne(this)" class=" ratio-16x9"> 
+              <div class="youtube" id="9AuuWoHxwMc"  ><img src="assets/img/promo.jpg" class="img-fluid" alt=""></div>
+              
+            </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>About me</h3>
