--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>Introduction</h2>
-          <p>Guitar teacher with a long experience of providing guitar lessons all over the world now in The Hague, Netherlands <i class="bi bi-geo-alt"></i></p>
+          <p>Guitar teacher with a long experience of giving guitar lessons all over the world now in The Hague, Netherlands <i class="bi bi-geo-alt"></i></p>
         </div>
 
         <div class="row">
