--- a/index.html
+++ b/index.html
@@ -516,11 +516,11 @@ I will share my experience in creating music, tell you about the patterns of com
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Sophia</h3>
+                <!--<h4>Ceo &amp; Founder</h4>-->
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Thanks to Jack, I now have a solid foundation in guitar playing. His guidance on improvisation and composition has been invaluable. I couldn't ask for a better teacher!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
