--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="row">
              <div class=content">
                 <ul>
+			<li><i class="bi bi-chevron-right"></i> <strong>Graduated</strong> <span>from St.Petersburg Music Colledge 2007</span></li>
                   <!--<li><i class="bi bi-chevron-right"></i> <strong>Master's Degree </strong> <span>at University of Nicosia ( Master of Music in Advanced Music Pedagogy) </span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>Winner</strong> <span>of the Jared Dines Shred Contest 2023</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Participant</strong> <span>of <a href="https://youtu.be/r6YvB0NblPw?si=AQjAf-QX9rUjXZUL&t=17m22s" >The Biggest Shred Collab Song In The World 6 (2023)</a></span></li>
