--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ I will share my experience in creating music, tell you about the patterns of com
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/sophia.jpg" class="testimonial-img" alt="">
                 <h3>Sophia</h3>
                 <!--<h4>Ceo &amp; Founder</h4>-->
                 <p>
@@ -544,7 +544,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Erik</h3>
-                <--<h4>Store Owner</h4>-->
+                <!--<h4>Store Owner</h4>-->
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Learning guitar with Jack has been an incredible experience. He adapts to my learning pace and makes each lesson fun and engaging. Highly recommend!
