--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/sophia.jpg" class="testimonial-img" alt="">
                 <h3>Sophia</h3>
-                <!--<h4>Ceo &amp; Founder</h4>-->
+                <h4>Netherlands</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Thanks to Jack, I now have a solid foundation in guitar playing. His guidance on improvisation and composition has been invaluable. I couldn't ask for a better teacher!
@@ -531,7 +531,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/vano.jpg" class="testimonial-img" alt="">
                 <h3>David</h3>
-                <!--<h4>Designer</h4>-->
+                <h4>Armenia</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Jack's expertise in both music theory and practical techniques has greatly improved my playing. His friendly approach makes every lesson enjoyable.
@@ -544,7 +544,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/igor.jpg" class="testimonial-img" alt="">
                 <h3>Erik</h3>
-                <!--<h4>Store Owner</h4>-->
+                <h4>Germany</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Learning guitar with Jack has been an incredible experience. He adapts to my learning pace and makes each lesson fun and engaging. Highly recommend!
@@ -557,7 +557,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt</h3>
-                <!--<h4>Freelancer</h4>-->
+                <h4>Australia</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   I started as a complete beginner, and within a few months, I could play my favorite songs. Jack's patience and clear explanations made all the difference.
@@ -570,7 +570,7 @@ I will share my experience in creating music, tell you about the patterns of com
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John</h3>
-                <!--<h4>Entrepreneur</h4>-->
+                <h4>United Kingdom</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Jack is an amazing guitar teacher! His personalized lesson plans helped me progress faster than I ever expected. His passion for music is truly inspiring.
