--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content">
             <h3>About me</h3>
             <p >
-              Teaching guitar is my passion, I enjoy the process of sharing my knowledge and experience with people, watching their progress, it inspires me to improve myself and keep discovering new things in the magical world of music. 
+               Teaching guitar motivates me to continually improve myself. It inspires me to explore the vast, enchanting world of music, discovering new techniques, genres, and styles. Sharing this journey with my students not only enhances their musical abilities but also enriches my own experience as a musician and educator.
             </p>
             <div class="row">
              <div class=content">
