--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Jack Woodman</h1>
-      <p>I'm <span class="typed" data-typed-items="Guitar teacher, Musician, Blogger"></span></p>
+      <p>I'm a<span class="typed" data-typed-items="Guitar teacher, Musician, Blogger"></span></p>
       <div class="social-links">
 	  
 	  <a href="https://instagram.com/jackwoodman" class="instagram"><i class="bx bxl-instagram"></i></a>
