--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ I will share my experience in creating music, tell you about the patterns of com
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Here are some examples of me playing or demonstrating how to play something on guitar. More of these you can find on my socials, btw it's plenty of useful content there for free, so don't hesitate to follow <i class="bi bi-emoji-smile"></i></p>
+          <p>Here are some examples of me playing or demonstrating guitar techniques. You can find more on my social media, where I share plenty of useful content for free. Don't hesitate to follow<i class="bi bi-emoji-smile"></i></p>
         </div>
 
         <!--<div class="row">
