--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a href="https://tiktok.com/@jackwoodman" class="twitter"><i class="bx bxl-tiktok"></i></a>
 		<a href="https://www.youtube.com/@JackWoodman" class="youtube1"><i class="bx bxl-youtube"></i></a>
         <a href="https://www.facebook.com/JackWoodmanGuitar" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://patreon.com/jackwoodman" class="linkedin"><i class="bx bxl-patreon"></i></a>
+        <a href="https://patreon.com/jackwoodman" style="margin-right:0;" class="linkedin"><i class="bx bxl-patreon"></i></a>
         
         
       </div>
