--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
 
         <div class="section-title">
           <h2>What I can give you</h2>
-          <p>Individual training program for each student, based on their goals and musical preferences. 
-My work is not just to give a textbook and supervise the exercises, but to create a learning plan to help student enjoy the process, because I believe this approach leads to a maximum progress in the shortest amount of time.</p>
+          <p>I create individual training programs for each student based on their goals and musical preferences. My approach goes beyond simply giving textbooks and supervising exercises; I design personalized learning plans to ensure students enjoy the process. I believe this method provides maximum progress in the shortest possible time.</p>
         </div>
 
         <div class="row">
@@ -254,7 +253,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
                 <i class="bi bi-gear-wide-connected"></i>
               </div>
               <h4><a href="">Basic Mechanics</a></h4>
-              <p>I will help you avoid mistakes at the start ( hand positioning, posture, grip of the plectrum, etc.) for a beginner, find and eliminate bad habits holding you back for a guitar player with skills. </p>
+              <p>I will help you avoid mistakes at the start, such as hand positioning, posture, and grip of the plectrum. For those with guitar skills, I'll find and eliminate any bad habits holding you back.</p>
             </div>
           </div>
 
@@ -267,7 +266,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Repertoire Adaptation</a></h4>
-              <p>I will adapt music repertoire to your level (a common mistake of beginners is to try to play a difficult piece head-on and give up after failure, although it is enough to change the key/position/arrangement and you are already playing your favorite song).</p>
+              <p>I will adapt the music repertoire to your level. A common mistake beginners make is trying to play a difficult piece right away and giving up after failure. Often, a simple adjustment in key, position, or arrangement can have you playing your favorite songs successfully.</p>
             </div>
           </div>
 
@@ -280,7 +279,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
                 <i class="bi bi-music-note-beamed"></i>
               </div>
               <h4><a href="">Music Theory</a></h4>
-              <p>I will explain how music theory can help you, how to use it and get benefit of it. I will teach you how to read notation, tablature, chord symbols etc.</p>
+              <p>I will explain how music theory can benefit you, how to apply it effectively, and how to read notation, tablature, chord symbols, and more.</p>
             </div>
           </div>
 
@@ -293,7 +292,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
                 <!--<i class="bx bx-layer"></i>--><i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Speed Building</a></h4>
-              <p>I will help you to start playing faster, faster, even faster! To the speed of light!</p>
+              <p>I will help you start playing faster, and even faster than that! We'll aim for the speed of light!</p>
             </div>
           </div>
 
@@ -306,7 +305,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
                 <i class="bi bi-speaker"></i>
               </div>
               <h4><a href="">Gear</a></h4>
-              <p>I will talk about types of guitars, pedals and other gear, sound recording, performances, and playing in a band. 
+              <p>I will cover various topics including types of guitars, pedals and other gear, sound recording, live performances, and playing in a band. 
 </p>
             </div>
           </div>
@@ -321,7 +320,7 @@ My work is not just to give a textbook and supervise the exercises, but to creat
               </div>
               <h4><a href="">Improvising/Composing</a></h4>
               <p>I will teach you how to improvise / jam in any key. 
-I will share my experience in creating music, tell you about the patterns of composition with examples of your favorite songs.</p>
+I will share my experience in creating music and explain patterns of composition, using examples from your favorite songs.</p>
             </div>
           </div>
 
